(#262) fixed preserving b/i/u everywhere + fixed broken img cropping

--- a/app/assets/stylesheets/components/lesson/_image-student-worksheet.scss
+++ b/app/assets/stylesheets/components/lesson/_image-student-worksheet.scss
@@ -1,4 +1,6 @@
 .o-ld-image-student-worksheet {
+  margin-left: auto;
+  margin-right: auto;
   overflow: hidden;
   position: relative;
 
